configuracion de boton de proveedores

--- a/proyectofinal/MainWindow.xaml
+++ b/proyectofinal/MainWindow.xaml
@@ -3,7 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Button Content="Ventana Nueva" HorizontalAlignment="Left" Margin="353,243,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.8,1.508" Click="Button_Click_1"/>
+        <Button x:Name="enviapro" Content="Proveedor" HorizontalAlignment="Left" Margin="193,66,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.8,1.508" Click="Button_Click_1" Height="25"/>
+        <Button x:Name="envioser" Content="Servicio" HorizontalAlignment="Left" Margin="193,110,0,0" VerticalAlignment="Top" Width="100" Height="25"/>
+        <Button x:Name="enviarfac" Content="Factura" HorizontalAlignment="Left" Margin="193,254,0,0" VerticalAlignment="Top" Width="100" Height="25"/>
+        <Button x:Name="enviocue" Content="Cuenta " HorizontalAlignment="Left" Height="25" Margin="193,202,0,0" VerticalAlignment="Top" Width="100"/>
+        <Button x:Name="enviarasi" Content="Asistente" HorizontalAlignment="Left" Height="24" Margin="193,158,0,0" VerticalAlignment="Top" Width="100"/>
+        <Label x:Name="Tutulo" Content="Bievenido a HelpMe App" HorizontalAlignment="Left" Margin="179,10,0,0" VerticalAlignment="Top" Width="147"/>
 
     </Grid>
 </Window>
